# multi-tenant-saas-api

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_live.py
alembic/: env.py
alembic/versions/: c86397967e01_initial.py
app/: __init__.py  config.py  database.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  billing.py  feature_flags.py  plans.py  router.py  tenants.py  users.py
app/core/: exceptions.py  pagination.py  rate_limiter.py  security.py  tenant_context.py
app/crud/: feature_flag.py  plan.py  tenant.py  user.py
app/middleware/: audit_middleware.py  security_headers.py  tenant_middleware.py
app/models/: __init__.py  audit_log.py  feature_flag.py  plan.py  subscription.py  tenant.py  user.py
app/schemas/: auth.py  feature_flag.py  plan.py  tenant.py  user.py
docker/: Dockerfile
docs/: architecture.md  configuration.md  getting-started.md  project-structure.md  testing.md
docs/api/: auth.md  billing.md  feature-flags.md  plans.md  tenants.md  users.md
tests/: conftest.py  test_auth.py  test_tenants.py
